@@ -2812,9 +2812,9 @@ one)</font></td>
 
 <td><font size=-1>void</font></td>
 
-<td BGCOLOR="#666666" NOSAVE><font size=-1>&nbsp;</font></td>
+<td BGCOLOR="#FFFFFF" NOSAVE><font size=-1><a href="Enumerations.html#ImageType">ImageType</a></font></td>
 
-<td><font size=-1>Image type</font></td>
+<td><font size=-1>Image type.</font></td>
 </tr>
 
 <tr>
