@@ -1036,7 +1036,7 @@ in pixels.</font></td>
 
 <tr>
 <td>
-<center><a NAME="shaveImage"></a>s<font size=-1>haveImage</font></center>
+<center><a NAME="shaveImage"></a><font size=-1>shaveImage</font></center>
 </td>
 
 <td><font size=-1>const Geometry &amp;geometry_</font></td>
@@ -1670,7 +1670,7 @@ matte channel if&nbsp; the image has one otherwise create an opaque one.</font><
 
 <tr>
 <td>
-<center><a NAME="pageImage"></a>pageImage</center>
+<center><a NAME="pageImage"></a><font size=-1>pageImage</font></center>
 </td>
 
 <td><font size=-1><a href="Geometry.html#PostscriptPageSize">Geometry</a></font></td>
@@ -1678,10 +1678,10 @@ matte channel if&nbsp; the image has one otherwise create an opaque one.</font><
 <td><font size=-1>const <a href="Geometry.html#PostscriptPageSize">Geometry</a>
 &amp;pageSize_</font></td>
 
-<td><font size=-1>Preferred size and location of an image canvas.</font>
+<td><font size=-1>Preferred size and location of an image canvas.</font><font size=-1></font>
 <p><font size=-1>Use this option to specify the dimensions and position
 of the Postscript page in dots per inch or a TEXT page in pixels. This
-option is typically used in concert with <i><a href="#density">density</a></i>.</font>
+option is typically used in concert with <i><a href="#density">density</a></i>.</font><font size=-1></font>
 <p><font size=-1>Page may also be used to position a GIF image (such as
 for a scene in an animation)</font></td>
 </tr>
@@ -1919,6 +1919,18 @@ CD, JBIG, or JPEG.</font></td>
 <td><font size=-1>const string &amp;tileName_</font></td>
 
 <td><font size=-1>Tile name</font></td>
+</tr>
+
+<tr>
+<td>
+<center><a NAME="typeImage"></a><font size=-1>typeImage</font></center>
+</td>
+
+<td><font size=-1><a href="Enumerations.html#ImageType">ImageType</a></font></td>
+
+<td><font size=-1><a href="Enumerations.html#ImageType">ImageType</a> type_</font></td>
+
+<td><font size=-1>Image storage type.</font></td>
 </tr>
 
 <tr>
